added a line to hello.html

--- a/hello.html
+++ b/hello.html
@@ -4,6 +4,8 @@
         <title>Hello</title>
     </head>
     <body>
-        Hello world
+        Hello world!
+        <br/>
+        Checking if git push is working
     </body>
 </html>
