--- a/hello.html
+++ b/hello.html
@@ -5,6 +5,8 @@
     </head>
     <body>
         <h1>Welcome to my page</h1>
+        <h2> Hello </h2>
+        <!-- added h2, edited online to see git pull work -->
         Hello world!
         <br/>
         Checking if git push is working
