--- a/hello.html
+++ b/hello.html
@@ -11,5 +11,21 @@
         Hello world!
         <br/>
         Checking if git push is working
+        <table>
+            <thead>    <!--Table Head-->
+                <th>Year</th>   <!--Table Heading-->
+                <th>Work</th>   <!--Table Heading-->
+            </thead>
+            <tbody>     <!--Table Body-->
+                <tr>    <!--Table Row-->
+                    <td>2019-2020</td>    <!--Table Data for row1-->
+                    <td>self-taught Python Developer</td>    <!--Table Data for row1-->
+                </tr>
+                <tr>
+                    <td>2020-2021</td>
+                    <td>Learning Advanced Python</td>
+                </tr>
+            </tbody>
+        </table>
     </body>
 </html>
