color to orange

--- a/hello.html
+++ b/hello.html
@@ -2,9 +2,14 @@
 <html lang="en">
     <head>
         <title>Hello</title>
+        <style>
+            h1{
+                color: orange;
+            }
+        </style>
     </head>
     <body>
-        <h1 style="color: blue">Welcome to my page!</h1>
+        <h1>Welcome to my page!</h1>
 
         <h2> Hello </h2>
         <!-- added h2, edited online to see git pull work -->
