--- a/hello.html
+++ b/hello.html
@@ -2,6 +2,12 @@
 <html lang="en">
     <head>
         <title>Hello</title>
+        <style>
+            table, th, td{
+                border: 2px solid orchid;
+                border-collapse: collapse;
+            }
+        </style>
     </head>
     <body>
         <h1 style="color: blue">Welcome to my page!</h1>
